2013-12-23  Gustavo Noronha Silva  <gns@gnome.org>

        [GTK] [CMake] Add support for generating gtkdoc
        https://bugs.webkit.org/show_bug.cgi?id=116376

        Reviewed by Martin Robinson.

        * gtk/common.py: look for files in the directories used by the cmake build as well.

2013-12-23  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Build with network process unconditionally
        https://bugs.webkit.org/show_bug.cgi?id=126128

        Reviewed by Martin Robinson.

        * Scripts/webkitperl/FeatureList.pm: Remove network-process
        feature command line option.

2013-12-23  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] run-gtk-tests should always run glib tests with -k option
        https://bugs.webkit.org/show_bug.cgi?id=126132

        Reviewed by Philippe Normand.

        With -k command line option, gtester continues running all other
        test cases after a failure.

        * Scripts/run-gtk-tests:
        (TestRunner._run_test_glib): Use -k option when runing glib tests
        to not stop on failure.

2013-12-22  Martin Robinson  <mrobinson@igalia.com>

        [GTK][CMake] Integrate GResource for inspector files (and others?)
        https://bugs.webkit.org/show_bug.cgi?id=125569

        Reviewed by Gustavo Noronha Silva.

        * gtk/generate-inspector-gresource-manifest.py: Added.

2013-12-22  Csaba Osztrogonác  <ossy@webkit.org>

        Last URTBF after r160971 to make EFL build happy.

        * TestWebKitAPI/efl/PlatformWebView.cpp:
        * WebKitTestRunner/efl/PlatformWebViewEfl.cpp:

2013-12-21  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Add myself to some more watch lists.

        * Scripts/webkitpy/common/config/watchlist: Watch also soup, gst
        and binding scripts patches.

2013-12-20  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r160941.
        http://trac.webkit.org/changeset/160941